# invariant-gateway

./: .env  .gitignore  Dockerfile.gateway  README.md  chatbot_testing_bundler.py  client.py  docker-compose.local.yml  example_policy.gr  pyproject.toml  run.sh
.github/workflows/: publish-images.yml  publish_pypi.yml  tests_ci.yml
examples/: swarm_agent.py
examples/mcp-sse/: README.md  client.py  pyproject.toml  weather.py
gateway/: .env  Dockerfile.gateway  __main__.py  run.sh  serve.py  validate_config.py
gateway/common/: authorization.py  config_manager.py  constants.py  guardrails.py  mcp_sessions_manager.py  mcp_utils.py  request_context.py  request_context_data.py
gateway/converters/: anthropic_to_invariant.py  gemini_to_invariant.py
gateway/integrations/: explorer.py  guardails.py  guardrails.py
gateway/mcp/: README.md  constants.py  mcp.py  mcp_context.py  mcp_sessions_manager.py  mcp_transport_base.py  sse.py  stdio.py  streamable.py  utils.py
gateway/routes/: anthropic.py  base_provider.py  client.py  gemini.py  instrumentation.py  mcp-stdio.py  mcp_sse.py  mcp_streamable.py  open_ai.py
gateway/utils/: constants.py
proxy/: Dockerfile.proxy  proxy.py  requirements.txt  run.sh  serve.py  validate_config.py
proxy/common/: config_manager.py
proxy/routes/: anthropic.py  gemini.py  open_ai.py  proxy.py
proxy/tests/: claude_weather_agent  test_claude_weather_agent.py
proxy/utils/: constants.py  explorer.py
tests/: .env.test  Dockerfile.test  docker-compose.test.yml  requirements.txt  test-client.py  util.py
tests/integration/: utils.py  (+4 more)
(+45 files in other folders)
